--- a/css/Xkset.css
+++ b/css/Xkset.css
@@ -1,11 +1,11 @@
 @media (min-width: 700px) {
     .aplayer.aplayer-withlrc .aplayer-pic {
-    height: 200px;
-    width: 200px;
+    height: 1500px;
+    width: 150px;
      }
      .aplayer.aplayer-withlrc .aplayer-info {
-    margin-left: 200px;
-    height: 200px;
+    margin-left: 150px;
+    height: 150px;
     padding: 10px 0 0;
     position: relative;
      }
@@ -13,7 +13,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    margin: 0 0 50px 5px;
+    margin: 0 0 30px 5px;
     -webkit-user-select: text;
     -moz-user-select: text;
     -ms-user-select: text;
@@ -25,14 +25,14 @@
     .aplayer .aplayer-lrc {
     display: none;
     position: relative;
-    height: 60px;
+    height: 51px;
     text-align: center;
     overflow: hidden;
     margin: -10px 0 7px;
      }
     .aplayer .aplayer-info .aplayer-controller {
     position: relative;
-    top: 30px;
+    top: 0;
     display: flex;
      }
     .aplayer .aplayer-lrc .aplayer-lrc-contents {
