--- a/css/Xkset.css
+++ b/css/Xkset.css
@@ -1,7 +1,55 @@
+    .aplayer .aplayer-list::-webkit-scrollbar {
+    /*滚动条整体样式*/
+    width : 4px;  /*高宽分别对应横竖滚动条的尺寸*/
+     }
+    .aplayer .aplayer-list::-webkit-scrollbar-thumb {
+    /*滚动条里面小方块*/
+    border-radius   : 4px;
+    background-color: rgb(247, 247, 247);
+    background-image: -webkit-linear-gradient(
+        45deg,
+        rgb(255, 255, 255) 25%,
+        transparent 25%,
+        transparent 50%,
+        rgb(255, 255, 255) 50%,
+        rgb(255, 255, 255) 75%,
+        transparent 75%,
+        transparent
+      );
+     }
+    .aplayer .aplayer-list::-webkit-scrollbar-track {
+    /*滚动条里面轨道*/
+    box-shadow   : inset 0 0 5px rgb(255, 255, 255);
+    background   : #ededed;
+    border-radius: 4px;
+     }
 @media (max-width: 400px){
     #main{
     width: 340px;
     margin: 0 auto;
+     }
+    .aplayer .aplayer-list {
+    transition: all .5s ease;
+    will-change: height;
+    display: none;
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 415px;
+     }
+    .aplayer {
+    background: #fff;
+    font-family: Arial,Helvetica,sans-serif;
+    margin: 5px;
+    top: 14px;
+    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 7%), 0 1px 5px 0 rgb(0 0 0 / 10%);
+    border-radius: 5px;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    line-height: normal;
+    position: relative;
      }
     }
 
@@ -126,5 +174,28 @@
     transition: all .3s ease-in-out;
     -webkit-transform: scale(0);
     transform: scale(0);
+     }
+    .aplayer .aplayer-list {
+    transition: all .5s ease;
+    will-change: height;
+    display: none;
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 401px;
+     }
+    .aplayer {
+    background: #fff;
+    font-family: Arial,Helvetica,sans-serif;
+    margin: 5px;
+    top: 5px;
+    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 7%), 0 1px 5px 0 rgb(0 0 0 / 10%);
+    border-radius: 10px;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    line-height: normal;
+    position: relative;
      }
     }
