--- a/css/Xkset.css
+++ b/css/Xkset.css
@@ -220,6 +220,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
      }
+    /*
     #footer{
     display: none;
     position: relative;
@@ -246,4 +247,5 @@
         position: relative;
         right: 45px;
      }
+    */
     }
