--- a/css/Xkset.css
+++ b/css/Xkset.css
@@ -37,13 +37,13 @@
     display: none;
     overflow: hidden;
     overflow-y: scroll;
-    height: 415px;
+    height: 480px;
      }
     .aplayer {
     background: #fff;
     font-family: Arial,Helvetica,sans-serif;
     margin: 5px;
-    top: 14px;
+    top: 70px;
     box-shadow: 0 2px 2px 0 rgb(0 0 0 / 7%), 0 1px 5px 0 rgb(0 0 0 / 10%);
     border-radius: 5px;
     overflow: hidden;
@@ -53,6 +53,31 @@
     user-select: none;
     line-height: normal;
     position: relative;
+     }
+    #header{
+    position: fixed;
+    z-index: 198;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 20px;
+    background: #fff;
+    padding: 16px 1px 16px 1px;
+    border-radius: 2px;
+    box-shadow: 0px 0px 6px #ddd;
+    /* overflow: hidden; */
+    text-overflow: ellipsis;
+    white-space: nowrap;
+     }
+    .left{
+        float: left;
+        position: relative;
+        left: 25px;
+     }
+    .right{
+        float: right;
+        position: relative;
+        right: 25px;
      }
     }
 
