--- a/css/Xkset.css
+++ b/css/Xkset.css
@@ -1,9 +1,60 @@
-    * {padding: 0;margin: 0;list-style: none;}
+    * {
+        padding: 0;margin: 0;list-style: none;
+    }
     
+    .aplayer .aplayer-list {
+    transition: all .5s ease;
+    will-change: height;
+    display: none;
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 385px;
+    }
+    .aplayer {
+    background: #fff;
+    font-family: Arial,Helvetica,sans-serif;
+    margin: 5px;
+    top: 68.5px;
+    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 7%), 0 1px 5px 0 rgb(0 0 0 / 10%);
+    border-radius: 5px;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    line-height: normal;
+    position: relative;
+    }
+    #header{
+    position: fixed;
+    z-index: 198;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 20px;
+    background: #fff;
+    padding: 16px 1px 16px 1px;
+    border-radius: 2px;
+    box-shadow: 0px 0px 6px #ddd;
+    /* overflow: hidden; */
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    }
+    .left{
+        float: left;
+        position: relative;
+        left: 25px;
+    }
+    .right{
+        float: right;
+        position: relative;
+        right: 25px;
+    }
+
     .aplayer .aplayer-list::-webkit-scrollbar {
     /*滚动条整体样式*/
     width : 4px;  /*高宽分别对应横竖滚动条的尺寸*/
-     }
+    }
     .aplayer .aplayer-list::-webkit-scrollbar-thumb {
     /*滚动条里面小方块*/
     border-radius   : 4px;
@@ -18,13 +69,13 @@
         transparent 75%,
         transparent
       );
-     }
+    }
     .aplayer .aplayer-list::-webkit-scrollbar-track {
     /*滚动条里面轨道*/
     box-shadow   : inset 0 0 5px rgb(255, 255, 255);
     background   : #ededed;
     border-radius: 4px;
-     }
+    }
 
 @media (max-width: 400px){
     #main{
