--- a/css/Xkset.css
+++ b/css/Xkset.css
@@ -2,6 +2,10 @@
         padding: 0;margin: 0;list-style: none;
     }
     
+    body{
+        background-color: #e9e9e9;
+    }
+
     .aplayer .aplayer-list {
     transition: all .5s ease;
     will-change: height;
