--- a/css/Xkset.css
+++ b/css/Xkset.css
@@ -291,7 +291,8 @@
     top: 0;
     right: 0;
     width: 100%;
-    height: 20px;
+    height: 23.5px;
+    font-size: 17px;
     background: #fff;
     padding: 16px 1px 16px 1px;
     border-radius: 2px;
@@ -346,4 +347,16 @@
     font-size: 15px;
     color: #666;
      }
+     .aplayer .aplayer-list ol li {
+        position: relative;
+        height: 32px;
+        line-height: 32px;
+        padding: 0 15px;
+        font-size: 14px;
+        border-top: 1px solid #e9e9e9;
+        cursor: pointer;
+        transition: all .2s ease;
+        overflow: hidden;
+        margin: 0;
+    }
     }
